bdr.BDR.scala.error
Compilation error:
BDR:3: error: ';' expected but '=' found.
  Var Mess: String=litMessage()
                  ^BDR:7: error: ';' expected but 'else' found.
  else 
  ^BDR:11: error: ';' expected but 'else' found.
    else
    ^BDR:16: error: ';' expected but 'else' found.
      else
      ^BDR:19: error: ';' expected but 'else' found.
          else
          ^BDR:23: error: ';' expected but 'else' found.
            else
            ^BDR:28: error: ';' expected but 'else' found.
              else
              ^BDR:31: error: ';' expected but 'else' found.
                        else
                        ^BDR:35: error: ';' expected but 'else' found.
                          else
                          ^BDR:40: error: ';' expected but 'else' found.
                            else
                            ^